--- a/style.css
+++ b/style.css
@@ -1,16 +1,3 @@
-@font-face {
-    font-family: 'robotoregular';   
-    src: url('Font/Roboto-Regular-webfont.woff') format('woff');
-         
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-@font-face{
-    font-family: Montserrat;
-    src:url(Font/montserrat/MontserratAlternates-ExtraBold.otf) format('otf');
-}
 
 /* --- Centralisation du contenu de la page --- */
 body
@@ -107,8 +94,7 @@ section:nth-of-type(1)
     
     padding-bottom: 20vh;  
     padding-top: 20vh;  
-    background: url("images/hero-background.jpg") top no-repeat;
-    background-color: #D92950;
+    background: url("images/hero-background.jpg") top no-repeat;    
     background-size:cover;
     
 }
@@ -142,7 +128,7 @@ section:nth-of-type(1)
 .titre1
 {    
     
-    font-family: Montserrat, sans-serif;
+    font-family: 'Montserrat', sans-serif;
     font-size: 74.205px;
     text-align: center;
     color: rgb(255, 255, 255);
@@ -160,19 +146,19 @@ section:nth-of-type(1)
 {
     display: flex;
     justify-content: center;
-    margin-bottom: -20px;
+    margin-bottom: 5px;
     
 }
 
 .bs-2-contenaire button
 {    
-    width: 220px;
-    padding: 20px;
-    margin: 15px;
+    width: 270px;
+    padding: 15px 25px;
+    margin: 24px 8px 0px;
     background: #fff;
-    color: #d92950;
-    font-weight: bold;
-    font-size: 14px;
+    color: #d92950;   
+    font-family: 'Roboto', sans-serif; 
+    font-size: 20px;
     border:  #fff 2px solid;    
     border-radius: 15px;
     cursor: pointer;
@@ -193,7 +179,7 @@ section:nth-of-type(1)
     color: #fff; 
     text-align: center;  
     font-size: 16px; 
-    font-family: Montserrat, sans-serif;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .md-2-contenaire
@@ -214,25 +200,94 @@ section:nth-of-type(1)
 
 /* --- Section 2 --- */
 section:nth-of-type(2)
-{
-        
+{   
+    position: relative;     
     background-color: #f1f0f3;
-
+    padding: 100px 30px;
 }
 
-.illustrations
+.contenaire-sect-2
 {
     display: flex;
+    justify-content: space-between;
+}
+/*
+
+Images
+
+*/
+.sp1-contenaire-sect-2
+{
+    padding: 40px 15px;
+}
+
+.sect-2-content-img
+{
+    flex-basis: 50%;
+}
+
+#img1
+{
+    position: relative;
+    width: 505px;
+    height: 379px;
+    border-radius: 25px;
+    left:-100px;
+}
+
+#img2
+{
+    position: relative;
+    width: 337px;
+    height: 252px;    
+    border-radius: 25px;
+    margin-top: -200px;
+    margin-left: 160px;
+}
+
+
+.sp2-contenaire-sect-2
+{
+    padding: 0px 15px;
+}
+
+.sp2-contenaire-sect-2 h1
+{
+    margin: O 0 30px;
+    color: #424345;
+    font: 40px  Montserrat,sans-serif;
+    font-weight: 600;
+}
+
+.grid
+{
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 50% 50%;
+    padding: 30px;
+    
+    margin: 0px 0px 8px;
+    color: #424345;
+    text-align: center;
     
 }
-.illustrations img
+
+.grid h5
 {
-    flex-basis: 50px;
-    width: 100%;
-    height: 100%;
+    font-size: 20px;
+    font-weight: 600;
+    font: 20px Montserrat, sans-serif;
 }
 
+.grid img
+{
+    width: 50px;
+    height: 62px;
+}
+ 
+/* -- fin section 2 -- */
 
+/* -- debut section 3 -- */
 section:nth-of-type(3)
 {
     flex-basis: 100px;
